--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,14 @@
 
   <form action="<%= session_url %>" method="POST" >
     <input type="hidden" name="_method" value="Delete">
+    <input type="hidden" name="authenticity_token" value="<%=form_authenticity_token%>">
 
     <button>Log Out</button>
   </form>
 
 <% else %>
-  <form action="<%= new_session_url %>" method="GET" >
+  <form action="<%= new_session_url %>" method="GET">
+
     <button>Log In</button>
   </form>
   <form action="<%= new_user_url %>" method="GET" >
