--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,7 @@
 <h1>Make a new Account!</h1>
 
 <form action="<%=users_url%>" method="POST">
+  <input type="hidden" name="authenticity_token" value="<%=form_authenticity_token%>"
 
   <label for="user_username">Username</label>
   <input type="text" id="user_username" name="user[username]" value="<%=@user.username %>" >
